BUGFIX: Don't break whitespaces in dropdown

--- a/Resources/Private/src/style.css
+++ b/Resources/Private/src/style.css
@@ -18,4 +18,5 @@
 .dialog button {
 	width: 100%;
 	text-align: left;
+	white-space: nowrap;
 }
